--- a/style.css
+++ b/style.css
@@ -1,34 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-.about-us-banner {
-    height: 520px;
-    padding-top: 90px;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .4);
-    position: relative;
-    color: white;
-}
-
-.about-us-banner-img {
-    background-image: url(https://www.showaround.com/src/images/cdbcd1ae9e0b729a9b0395bfaa66b3ac.jpg);
-    background-repeat: no-repeat;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    z-index: -1;
-    opacity: 0.7;
-    background-size: cover;
-}
-
-.about-us-banner-content h1 {
-    font-size: 16px;
-}
-
-.about-us-banner-content p {
-    line-height: 1.2;
-    font-size: 46px;
-    margin-top: 38px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;
-}
+@import url('http://fonts.googleapis.com/css?family=Poppins');
