--- a/style.css
+++ b/style.css
@@ -1,172 +1,265 @@
-html {
-    margin: 0px;
-    height: 100%;
-    width: 100%;
- }
- 
- body {
-    margin: 0px;
-    min-height: 100%;
-    width: 100%;
-    position: relative;
-    font-family: sans-serif;
- }
+@import url('http://fonts.googleapis.com/css?family=Poppins');
 
- textarea:focus, input:focus{
-    outline: none;
-}
-ul
-{
-    list-style: none;
-    padding: 0;
+/*about-us */
+
+.about-us {
+    font-family: 'Poppins', sans-serif;
 }
 
-nav ul
-{
-    display: flex;
-    justify-content: flex-end;
-}
-nav ul li
-{
-    margin-left: 10px;
-    margin-right: 10px;
-}
-nav ul li:hover
-{
-    text-decoration: underline;
-cursor: pointer;
-}
-nav ul li a
-{
-    color: rgba(0,0,0,0.87);
-    text-decoration: none;
-    
-}
-
-
-section
-{
+.about-us-banner {
+    height: 520px;
+    padding-top: 90px;
     text-align: center;
-    margin-top: 100px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .4);
+    position: relative;
+    color: white;
 }
 
-.search-box
-{
+.about-us-banner-img {
+    background-image: url(https://www.showaround.com/src/images/cdbcd1ae9e0b729a9b0395bfaa66b3ac.jpg);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: -1;
+    opacity: 0.7;
+    background-size: cover;
+}
+
+.about-us-banner-content h1 {
+    font-size: 16px;
+}
+
+.about-us-banner-content p {
+    line-height: 1.2;
+    font-size: 46px;
+    margin-top: 38px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+}
+
+
+/* .about-us-story {
+    position: absolute;
+    top: 400px;
+    z-index: 100;
+    left: 50%;
+    right: 0;
+    width: 60%;
+    transform: translateX(-50%);
+}
+
+.about-us-story-content {
+    background-color: #f38630;
+}
+
+.about-us-story-content h2 {
+    margin-bottom: 14px;
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 1.8;
+    color: #522b0d;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.about-us-story-content h3 {
+    text-align: left;
+    width: 80%;
+    margin: 0 auto;
+    font-size: 26px;
+    color: white;
+}
+
+#story-content {
+    width: 95%;
+    margin: 0 auto;
+    line-height: 1.5;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    margin-top: 20px;
+}
+
+.about-us-story-content ul {
+    display: flex;
+    /* width: 100%; */
+
+
+/* padding: 0;
+    list-style: none;
+    justify-content: space-between;
+    margin-top: 30px;
+    border-top: 1px solid #fca663;
+} */
+
+
+/* 
+.about-us-story-content ul li {
+    width: 33%;
+    text-align: center;
+    padding-top: 25px;
+    border-right: 1px solid #fca663;
+}
+
+.about-us-story-content ul li .total {
+    line-height: 1;
+    letter-spacing: 2px;
+    color: white;
+}
+
+.about-us-story-content ul li .number {
+    font-size: 36px;
+    letter-spacing: normal;
+    color: white;
+} */
+
+*/
+/*about-us */
+
+
+/*meet-our-teams */
+
+.team-member {
+    /* padding-top: 400px; */
+}
+
+.meet-our-teams {
+    width: 100%;
+}
+
+.line-wrapper {
+    height: 80px;
+    margin-top: 30px;
+}
+
+.line1 {
     position: relative;
+    height: 1px;
     width: 30%;
     margin: 0 auto;
-    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
-    border-radius: 25px;
-}
-.fa-microphone
-{
-    position: absolute;
-    right: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #5F6368;
-}
-.fa-search
-{
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #5F6368;
-}
-.search-box input{
-width: 80%;
-height: 44px;
-border: none;
-border-radius: 20px;
-}
-.btn-area
-{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-.google-btn
-{
-    background-color: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    color: #5F6368;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.07);
     cursor: pointer;
-    padding: 10px;
-}
-.google-btn:hover
-{
-    color: black;
-    border: 1px solid black;
 }
 
-footer
-{
+.line1 .center {
     position: absolute;
-    width: 100%;
-    bottom: 0;
-    color: #5f6368;
+    left: 49%;
+    display: block;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #f38630;
+    border-radius: 50%;
+    transform: translateX(-50%);
+    /* transform: translateY(10px); */
+    transform: translateY(-4px);
+    z-index: 10;
+    background-color: white
 }
-.footer1
-{
-    background: #f2f2f2;
-    line-height: 40px;
-    min-width: 980px;
-    border-top: 1px solid #e4e4e4;
+
+.line1 .line2 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    height: 1px;
+    width: 100px;
+    background: #f38630;
+    transition: all .3s ease-in-out;
 }
- .footer2
-{
+
+.line-wrapper:hover .line1 .line2 {
+    width: 300px;
+}
+
+.meet-our-teams-contain-title {
+    margin-top: 100px;
+    /* text-align: center; */
+    font-weight: bold;
+    text-align: center;
+}
+
+.meet-our-teams-contain-p {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 22px;
+    color: gray;
+    text-align: center;
+}
+
+.meet-our-teams-contain>.flip-card-wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    background: #f2f2f2;
-    min-width: 980px;
-    border-top: 1px solid #e4e4e4;
 }
-.footer2-ul1
-{
-display: flex;
+
+.flip-card {
+    width: 300px;
+    height: 350px;
+    border-radius: 4px;
+    position: relative;
+    perspective: 900px;
+    transition: 0.4s;
 }
-.footer2-ul1 li
-{
-margin-right: 20px;
+
+.flip-card .user-img {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: 0.4s;
+    transform: rotateY(0deg);
+    backface-visibility: hidden;
+    text-align: center;
+    /*khi xoay -> ẩn mặt sau */
 }
-.footer2-ul1 li:hover
-{
-text-decoration: underline;
-cursor: pointer;
+
+.flip-card img {
+    width: 40%;
+    border-radius: 50%;
+    border: 4px solid white;
+    box-shadow: 0 0 0 7px #dedede;
+    margin-bottom: 20px;
+    width: 60%;
+    height: 200px;
 }
-.footer2-ul2
-{
-    display: flex; 
+
+.flip-card .user-info {
+    height: 100%;
+    width: 100%;
+    background: #f38630;
+    color: white;
+    box-sizing: border-box;
+    padding: 22px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    transition: 0.4s;
+    transform: rotateY(-180deg);
+    backface-visibility: hidden;
+    /*khi xoay -> ẩn mặt sau */
 }
-.footer2-ul2 li
-{
-margin-right: 20px;
+
+.flip-card .user-info div a i {
+    font-size: 30px;
+    margin-left: 30px;
+    color: white;
 }
-.footer2-ul2 li:hover
-{
-text-decoration: underline;
-cursor: pointer;
+
+.flip-card:hover .user-info {
+    transform: rotateY(0deg);
 }
-.google-offer-language
-{
-    margin-top: 30px;
+
+.flip-card:hover .user-img.text-xs-center {
+    transform: rotateY(180deg);
 }
-.google-offer-language ul
-{
-    display: flex;
-    justify-content: center;
-}
-.google-offer-language ul li 
-{
-    margin-right: 10px;
-}
-.google-offer-language ul li a
-{
-    text-decoration: none;
-}
-.google-offer-language ul li a:hover
-{
-    text-decoration: underline
-}
+
+
+/*meet-our-teams */
