Fixed mobile responsive

--- a/guides.css
+++ b/guides.css
@@ -179,3 +179,43 @@ html, body {
     right: 1rem;
     font-size: 13px;
 }
+
+@media (max-width:1200px) {}
+
+@media (max-width:1000px) {}
+
+@media (max-width:450px) {
+    .guides-card .additional .more-info {
+        padding-top: 20px;
+        width: auto !important;
+    }
+    .guides-card .general {
+        padding-top: 20px;
+    }
+    .guides-card h1 {
+        font-size: 24px;
+    }
+    .guides-card .general h1 {
+        font-size: 24px;
+    }
+    .guides-card .general p {
+        font-size: 12px;
+    }
+    .guides-card .general .more {
+        display: none;
+    }
+    .guides-card .additional .coords span+span {
+        float: none;
+    }
+    .mobile-hide {
+        display: none;
+    }
+    .guides-card .additional .coords {
+        margin: 0 1;
+        color: #fff;
+        font-size: auto;
+    }
+    .guides-card .general {
+        width: 180px;
+    }
+}
