--- a/style.css
+++ b/style.css
@@ -1,172 +1,46 @@
-html {
-    margin: 0px;
-    height: 100%;
-    width: 100%;
- }
- 
- body {
-    margin: 0px;
-    min-height: 100%;
-    width: 100%;
-    position: relative;
-    font-family: sans-serif;
- }
-
- textarea:focus, input:focus{
-    outline: none;
-}
-ul
+.btn-duy-login
 {
-    list-style: none;
-    padding: 0;
+    color:black;
+    background-color: white;
+    border-color: #888;
+}
+.btn-duy-login:hover{
+    color: white;
+    background-color: #888;
 }
 
-nav ul
-{
-    display: flex;
-    justify-content: flex-end;
+.btn-duy-register{
+    color:black;
+    background-color: blue;
+    border-color: blue;
 }
-nav ul li
-{
-    margin-left: 10px;
-    margin-right: 10px;
+.BG-footer{
+    background-color:#323337;
 }
-nav ul li:hover
+.makecolor{
+    color: #fff;
+
+}
+.makecolor-ul{
+    color: #45c0f7 !important
+}
+.morecolor{
+    color: white;
+    font-size: 50px;
+}
+.makecolor-twiter{
+    color:white;
+    font-size: 50px;
+}
+.duy-icon
 {
-    text-decoration: underline;
 cursor: pointer;
+/* dung de co cam giac ho chuot */
 }
-nav ul li a
+@media (max-width:776px)
 {
-    color: rgba(0,0,0,0.87);
-    text-decoration: none;
-    
-}
-
-
-section
+.mobile-footer-duy
 {
-    text-align: center;
-    margin-top: 100px;
+    text-align: center !important;
 }
-
-.search-box
-{
-    position: relative;
-    width: 30%;
-    margin: 0 auto;
-    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
-    border-radius: 25px;
-}
-.fa-microphone
-{
-    position: absolute;
-    right: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #5F6368;
-}
-.fa-search
-{
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #5F6368;
-}
-.search-box input{
-width: 80%;
-height: 44px;
-border: none;
-border-radius: 20px;
-}
-.btn-area
-{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-.google-btn
-{
-    background-color: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    color: #5F6368;
-    cursor: pointer;
-    padding: 10px;
-}
-.google-btn:hover
-{
-    color: black;
-    border: 1px solid black;
-}
-
-footer
-{
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    color: #5f6368;
-}
-.footer1
-{
-    background: #f2f2f2;
-    line-height: 40px;
-    min-width: 980px;
-    border-top: 1px solid #e4e4e4;
-}
- .footer2
-{
-    display: flex;
-    justify-content: space-between;
-    background: #f2f2f2;
-    min-width: 980px;
-    border-top: 1px solid #e4e4e4;
-}
-.footer2-ul1
-{
-display: flex;
-}
-.footer2-ul1 li
-{
-margin-right: 20px;
-}
-.footer2-ul1 li:hover
-{
-text-decoration: underline;
-cursor: pointer;
-}
-.footer2-ul2
-{
-    display: flex; 
-}
-.footer2-ul2 li
-{
-margin-right: 20px;
-}
-.footer2-ul2 li:hover
-{
-text-decoration: underline;
-cursor: pointer;
-}
-.google-offer-language
-{
-    margin-top: 30px;
-}
-.google-offer-language ul
-{
-    display: flex;
-    justify-content: center;
-}
-.google-offer-language ul li 
-{
-    margin-right: 10px;
-}
-.google-offer-language ul li a
-{
-    text-decoration: none;
-}
-.google-offer-language ul li a:hover
-{
-    text-decoration: underline
 }
