--- a/exp.css
+++ b/exp.css
@@ -77,6 +77,7 @@ body{
 }
 .btn-readMore:hover{
     background-color: rgb(221, 106, 74);
+    cursor: pointer;
 }
 .title-left{
     margin-top: 30px;
@@ -140,13 +141,14 @@ body{
 }
 .btn-readMore2:hover{
     color: #E27D60;
+    cursor: pointer;
 }
 
 
 
 
 .info2{
-    border: 1px solid #f2f2f2f2;
+    border: 1px solid rgba(3,169,244,.7);
     display: flex;
     
 }
@@ -170,6 +172,7 @@ body{
 }
 .btn-readMore3:hover{
     color: #3ab2b3;
+    cursor: pointer;
 }
 
 
@@ -191,6 +194,11 @@ body{
     font-size: 14px;
     color: #ffffff;
     text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    -webkit-box-orient: vertical;
 }
 #title-left{
     background-color:  rgba(3,169,244,.7);
@@ -209,6 +217,7 @@ body{
 }
 .btn-readMore4:hover{
     background-color: #3ab2b3;
+    cursor: pointer;
 }
 
 .showMore{
@@ -226,5 +235,6 @@ body{
 }
 .btn-showMore:hover{
     color: #E27D60;
+    cursor: pointer;
     
 }
