--- a/guides.css
+++ b/guides.css
@@ -8,9 +8,15 @@ html, body {
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
 }
+.cards-wrapper
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between
+}
 
 .guides-card {
-    width: 450px;
+    width: 500px;
     height: 250px;
     background-color: #fff;
     background: #fff;
@@ -18,7 +24,7 @@ html, body {
     border-radius: 6px;
     overflow: hidden;
     position: relative;
-    margin: 1.5rem;
+    margin-bottom: 30px;
 }
 
 .guides-card h1 {
@@ -82,7 +88,7 @@ html, body {
 }
 
 .guides-card .additional .more-info {
-    width: 300px;
+    width: 350px;
     float: left;
     position: absolute;
     left: 150px;
@@ -153,7 +159,7 @@ html, body {
 }
 
 .guides-card .general {
-    width: 300px;
+    width: 350px;
     height: 100%;
     position: absolute;
     top: 0;
