--- a/style.css
+++ b/style.css
@@ -90,4 +90,21 @@ body {
 {
     height: 510px;
 }
-
+.video-section .carousel-item
+{
+background-color: linear-gradient(135deg,rgba(3,169,244,.35) 0,rgba(167,219,216,.35) 44%,rgba(243,134,48,.35) 100%) rgba(0,0,0,.2)
+}
+.video-section .carousel-item img
+{
+opacity:0.6 ;
+}
+.video-section .carousel-item-content
+{
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    padding-top: 100px;
+    justify-content: center;
+    width: 100%;
+    height:100%;
+}
