--- a/nav-footer.css
+++ b/nav-footer.css
@@ -1,54 +1,58 @@
-nav  {
+nav {
     font-size: 14px;
     background-color: #fff !important;
+    font-weight: 700;
 }
-.btn-duy-login
-{
-    
-cursor: pointer;
-    color:black;
+
+.btn-duy-login {
+    cursor: pointer;
+    color: black;
     background-color: white;
     border-color: #888;
     font-size: 12px;
     line-height: 1.2;
     padding: 7px 22px;
 }
-.btn-duy-login:hover{
+
+.btn-duy-login:hover {
     color: white;
     background-color: #888;
-    border-color:#888 ;
+    border-color: #888;
 }
-.btn-duy-register{
-    color:black;
+
+.btn-duy-register {
+    color: black;
     font-size: 12px;
     line-height: 1.2;
     padding: 7px 22px;
 }
-.BG-footer{
-    background-color:#323337;
+
+.BG-footer {
+    background-color: #323337;
 }
-.makecolor{
+
+.makecolor {
     color: #fff;
 }
-.makecolor-ul{
+
+.makecolor-ul {
     color: #45c0f7 !important
 }
-.morecolor{
+
+.morecolor {
     color: white;
     font-size: 50px;
 }
-.makecolor-twiter{
-    color:white;
+
+.makecolor-twiter {
+    color: white;
     font-size: 50px;
 }
-.duy-icon
-{
 
-cursor: pointer;
-
+.duy-icon {
+    cursor: pointer;
 }
-.mobile-footer-duy
-{
-   
+
+.mobile-footer-duy {
     text-align: center !important;
 }
