fix slider opacity

--- a/style.css
+++ b/style.css
@@ -178,7 +178,8 @@ body {
     background: none !important;
     text-indent: unset;
     display: flex;
-    justify-self: flex-start
+    justify-self: flex-start;
+    opacity: 0.5;
 }
 
 .video-section .slide-process-bao li:hover {
@@ -187,6 +188,7 @@ body {
 
 .video-section .carousel-indicators .active {
     border-bottom: 6px solid #f38630;
+    opacity: 1 !important;
 }
 
 .video-section .slide-process-bao li .slide-process-img {
