--- a/style.css
+++ b/style.css
@@ -71,7 +71,10 @@ body {
     /* padding: 20px; */
     height: 46px;
     width: 46px;
-    padding: 12px;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 50%;
     display: inline-block;
     color: #fff;
@@ -170,6 +173,7 @@ body {
     justify-content: space-between;
     width: 60%;
     margin: 0 auto;
+    bottom: 0;
 }
 
 .video-section .slide-process-bao li {
