--- a/jumbotron.css
+++ b/jumbotron.css
@@ -53,6 +53,7 @@ input:hover {
     border-radius: 25px;
     width: 550px;
     background-color: white;
+    display: flex;
 }
 .Minh-search .empty-div{
     position: absolute;
@@ -189,5 +190,79 @@ flex-direction: column;
     border-radius: 50%;
 }
 
+@media(max-width:1023px)
+{
+    .Minh-slider
+    {
+        display: none;
+    }
+    .Minh-mainpicture
+    {
+        width: 100%;
+    }
+    .minhtext-wrapper {
+        width: 94%;
+    }
+    .Minh-search
+    {
+        width: 850px;
+    }
+}
+@media(max-width:991px)
+{
+    
+    .Minh-mainpicture
+    {
+        width: 100%;
+    }
+    .minhtext-wrapper {
+        width: 94%;
+    }
+    .Minh-search
+    {
+        width: 500px;
+    }
+}
+@media(max-width:767px)
+{
+    .Minh-search
+    {
+        width: 400px;
+    }
+}
+@media(max-width:720px)
+{
+    .text-local
+    {
+        font-size: 38px;
+       
+        line-height: 48px;
+    }
+    .show-text {
+        font-size: 22px;
+        text-transform: uppercase;
+        line-height: 22px;
+    }
+    .Minh-mainpicture
+    {
+        padding-top: 0px;
+        padding-bottom: 33px;
+    }
+    .Minh-section
+    {
+        height: auto;
+    }
+}
+@media(max-width:460px)
+{
+    .Minh-search
+    {
+        width: 300px;
+    }
+    .disapear-mobile
+    {
+        display: none;
+    }
+}
 
 
