--- a/exp.css
+++ b/exp.css
@@ -1,4 +1,3 @@
-
 body{
     margin: 0 auto;
 }
@@ -77,7 +76,6 @@ body{
 }
 .btn-readMore:hover{
     background-color: rgb(221, 106, 74);
-    cursor: pointer;
 }
 .title-left{
     margin-top: 30px;
@@ -141,22 +139,23 @@ body{
 }
 .btn-readMore2:hover{
     color: #E27D60;
-    cursor: pointer;
 }
 
 
 
 
 .info2{
-    border: 1px solid rgba(3,169,244,.7);
+    border: 1px solid #f2f2f2f2;
     display: flex;
     
 }
 
 .info2 img{
- margin-left: 5px;
+ 
  width: 250px;
  height: 250px;
+ max-width: 100%;
+ max-height: 100%;
 }
 .btn-readMore3{
     background-color: #ffffff;
@@ -172,7 +171,6 @@ body{
 }
 .btn-readMore3:hover{
     color: #3ab2b3;
-    cursor: pointer;
 }
 
 
@@ -194,11 +192,6 @@ body{
     font-size: 14px;
     color: #ffffff;
     text-align: left;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* number of lines to show */
-    -webkit-box-orient: vertical;
 }
 #title-left{
     background-color:  rgba(3,169,244,.7);
@@ -217,7 +210,6 @@ body{
 }
 .btn-readMore4:hover{
     background-color: #3ab2b3;
-    cursor: pointer;
 }
 
 .showMore{
@@ -234,8 +226,47 @@ body{
     font-weight: bold;
 }
 .btn-showMore:hover{
-    color: white;
-    cursor: pointer;
-    background-color: #E27D60;
+    color: #E27D60;
     
 }
+.info img
+    {
+        
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+/* responsive */
+@media(max-width:1199)
+{
+    
+}
+  @media only screen and (max-width: 900px) {
+     #title-right{
+         margin-top: 30px;
+     }
+     #title-left{
+         margin-bottom: 30px;
+     }
+     .info2 img{
+        margin-right: -15px;
+    }
+    .btn-readMore4{
+        margin-top: 0px;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    .info{
+        margin-bottom: 20px;
+    }
+
+    #title-left{
+        margin-bottom: 20px;
+    }
+    .info2 img{
+        margin-right: -15px;
+    }
+    .btn-readMore4{
+        margin-top: -5px;
+    }
+  }
