--- a/jumbotron.css
+++ b/jumbotron.css
@@ -1,7 +1,6 @@
 
 .Minh-mainpicture{
     display:flex;
-    align-items: center;
     flex-direction: column;
     width:50%;
     padding-top: 90px;
@@ -27,7 +26,7 @@
 }
 .searchbar{
   margin-top:20px;
-  margin-left: 35px;
+
  }
 
   
@@ -122,7 +121,7 @@ textarea:focus, input:focus{
 }
 .Minh-section{
     position:relative;
-    height:550px;
+    height:auto;
     display:flex;
     background: linear-gradient(135deg,rgba(3,169,244,.35) 0,rgba(167,219,216,.35) 44%,rgba(243,134,48,.35) 100%) rgba(0,0,0,.15);
 }
@@ -154,7 +153,6 @@ flex-direction: column;
 }
 .small-text{
     padding-top: 20px;
-    margin-left: 40px;
 }
 .text-local{
     font-size: 66px;
@@ -188,6 +186,29 @@ flex-direction: column;
     width: 10px;
     height: 10px;
     border-radius: 50%;
+}
+.Minh-mainpicture
+{
+    padding-bottom: 33px;
+}
+.top-destination
+{
+    margin-top: 20px;
+}
+.top-destination p a
+{
+    text-decoration: none;
+    color: white;
+    font-weight: 100;
+}
+.top-destination p
+{
+    font-weight: 700;
+}
+.top-destination p a:hover
+{
+    text-decoration: underline;
+    
 }
 
 @media(max-width:1023px)
