RFixed responsive issues on cards and also removed hotlinks to profile pictures. Edited some content language as well as remove the +more in experiences

--- a/guides.css
+++ b/guides.css
@@ -1,6 +1,7 @@
 html,
 body {
     font-family: 'Poppins', sans-serif;
+    background: #fff;
 }
 
 .center {
@@ -189,14 +190,55 @@ body {
     font-size: 13px;
 }
 
-@media (max-width:1200px) {}
+@media (max-width:1200px) {
+    /* .cards-wrapper {
+        width: 50%;
+        margin: 0 auto;
+    } */
+}
 
 @media (max-width:1000px) {}
 
-@media (max-width:450px) {
+@media (max-width:550px) {
     .guides-card .additional .more-info {
         padding-top: 20px;
-        width: auto !important;
+        width: 50%;
+    }
+    .guides-card .general {
+        padding-top: 20px;
+    }
+    .guides-card h1 {
+        font-size: 24px;
+    }
+    .guides-card .general h1 {
+        font-size: 24px;
+    }
+    .guides-card .general p {
+        font-size: 12px;
+    }
+    .guides-card .general .more {
+        display: none;
+    }
+    .guides-card .additional .coords span+span {
+        float: none;
+    }
+    .mobile-hide {
+        display: none;
+    }
+    .guides-card .additional .coords {
+        margin: 0 1;
+        color: #fff;
+        font-size: auto;
+    }
+    .guides-card .general {
+        width: 180px;
+    }
+}
+
+@media (max-width:375px) {
+    .guides-card .additional .more-info {
+        padding-top: 20px;
+        width: 450 !important;
     }
     .guides-card .general {
         padding-top: 20px;
