--- a/nav-footer.css
+++ b/nav-footer.css
@@ -82,3 +82,21 @@ nav {
 .mobile-footer-duy {
     text-align: center !important;
 }
+
+.navbar-nav .language {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar-nav .language a {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.navbar-nav .language a:hover {
+    font-size: 12px;
+    color: #919496;
+    text-decoration: none;
+    margin-right: 10px;
+}
