--- a/exp.css
+++ b/exp.css
@@ -261,3 +261,46 @@ body{
         margin-top: 0px;
     }
   }
+
+  @media only screen and (max-width: 1200px) {
+    .info img{
+        
+        width: 220px;
+        height: 220px;
+       }
+    .info2 img{
+    
+    width: 220px;
+    height: 220px;
+    }
+    .btn-readMore4{
+        margin-top: -10px;
+    }
+    .btn-readMore {
+        margin-top: -5px;
+    }
+    .btn-readMore2 {
+        margin-top: -5px;
+    }
+    .btn-readMore3 {
+        margin-top: -5px;
+    }
+  }
+  @media only screen and (min-width: 530px) and (max-width: 1000px){
+     .info{
+        width: 480px;
+        margin-left: auto;
+        margin-right: auto;
+     }
+     .info2{
+        width: 480px;
+        margin-left: auto;
+        margin-right: auto;
+     }
+     #title-right{
+         margin-top: 30px;
+     }
+     #title-left{
+        margin-bottom: 30px;
+    }
+  }
