fix jumbotronm input

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -284,6 +284,10 @@ flex-direction: column;
     {
         display: none;
     }
+    .Minh-search input
+    {
+        width: 153px;
+    }
 }
 
 
