--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     display: flex;
     justify-content: center;
     list-style: none;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .savetime-banner-content ul li {
@@ -286,7 +286,7 @@ body {
         height: 410px;
     }
 }
-@media(max-width:400px)
+@media(max-width:430px)
 {
     .savetime-banner-content ul li
     {
@@ -298,6 +298,7 @@ body {
     }
     .savetime-banner-content ul
     {
-        margin-bottom: 0px;
+        margin-bottom: 0px !important;
     }
+   
 }
