--- a/about.css
+++ b/about.css
@@ -163,84 +163,140 @@
     text-align: center;
 }
 
-.meet-our-teams-contain-p {
-    width: 60%;
-    margin: 0 auto;
-    font-size: 22px;
-    color: gray;
-    text-align: center;
-}
-
-.meet-our-teams-contain>.flip-card-wrapper {
+.flip-card-wrapper
+{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.flip-card {
-    width: 300px;
-    height: 350px;
-    border-radius: 4px;
-    position: relative;
-    perspective: 900px;
-    transition: 0.4s;
+.img-wrapper
+{
+	width: 300px;
+	height: 400px;
+	position: relative;
+    overflow: hidden;
     margin-bottom: 30px;
 }
 
-.flip-card .user-img {
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transition: 0.4s;
-    transform: rotateY(0deg);
-    backface-visibility: hidden;
-    text-align: center;
-    /*khi xoay -> ẩn mặt sau */
+.img-wrapper:before
+{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 180%;
+	height: 100%;
+	width: 100%;
+	background: rgba(255,255,255,.3);
+	z-index: 1;
+	transform: skew(45deg);
+	transition: .5s;
 }
 
-.flip-card img {
-    width: 40%;
-    border-radius: 50%;
-    border: 4px solid white;
-    box-shadow: 0 0 0 7px #dedede;
-    margin-bottom: 20px;
-    width: 60%;
-    height: 200px;
+.img-wrapper:hover:before
+{
+	left: -180%;
 }
 
-.flip-card .user-info {
-    height: 100%;
-    width: 100%;
-    background: #f38630;
-    color: white;
-    box-sizing: border-box;
-    padding: 22px;
-    top: 0;
-    left: 0;
-    position: absolute;
-    transition: 0.4s;
-    transform: rotateY(-180deg);
-    backface-visibility: hidden;
-    /*khi xoay -> ẩn mặt sau */
+.img-wrapper img
+{
+	height: 400px;
+	width: 300px;
+	filter: grayscale(100%);
+	transition: 2s;
+}
+.img-wrapper:hover img
+{
+	filter: grayscale(0%);
+	transform: scale(1.1);
 }
 
-.flip-card .user-info div a i {
-    font-size: 30px;
-    margin-left: 30px;
-    color: white;
+.img-wrapper h2
+{
+	background: tomato;
+	font-family: Poppins;
+	color: #fff;
+	text-align: center;
+	text-transform: uppercase;
+	margin: 0;
+	padding: 10px 0;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	transform: perspective(400px) rotateY(90deg);
+	transform-origin: right;
+	transition: 1s;
 }
 
-.flip-card:hover .user-info {
-    transform: rotateY(0deg);
+.img-wrapper:hover h2
+{
+	transform: perspective(400px) rotateY(0deg);
 }
 
-.flip-card:hover .user-img.text-xs-center {
-    transform: rotateY(180deg);
+.img-wrapper ul
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	background: rgba(255,255,255,0);
+}
+
+.img-wrapper ul li
+{
+	background: #333;
+	height: 40px;
+	width: 40px;
+	text-align: center;
+	line-height: 40px;
+	transform: perspective(800px) rotateY(90deg);
+	transition: .5s;
+	transform-origin: left;
+}
+
+.img-wrapper:hover ul li
+{
+	transform: perspective(800px) rotateY(0deg);
+}
+
+.img-wrapper:hover ul li:nth-child(1)
+{
+	transition-delay: .2s;
+}
+
+.img-wrapper:hover ul li:nth-child(2)
+{
+	transition-delay: .6s;
+}
+
+.img-wrapper:hover ul li:nth-child(3)
+{
+	transition-delay: .8s;
+}
+
+.img-wrapper:hover ul li:nth-child(4)
+{
+	transition-delay: 1s;
+}
+
+.img-wrapper ul li a
+{
+	color: tomato;
+	background: rgba(255,255,255,0);
+}
+
+.img-wrapper ul li i
+{
+	color: tomato;
+	background: rgba(255,255,255,0);
+}
+
+.img-wrapper ul li i:hover
+{
+	color: #fff;
+	background: rgba(255,255,255,0);
 }
 
 
