--- a/about.css
+++ b/about.css
@@ -235,6 +235,8 @@
 
 .img-wrapper ul
 {
+    display: flex;
+    flex-wrap: wrap;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -258,7 +260,7 @@
 .img-wrapper ul li:last-child
 {
     height: auto;
-    width: 80%;
+    width: 100%;
     color: tomato;
     text-align: left;
     padding-left: 20px;
