Some changes to about content and css

--- a/about.css
+++ b/about.css
@@ -202,18 +202,18 @@
 {
 	height: 400px;
 	width: 300px;
-	filter: grayscale(100%);
-	transition: 2s;
+	/* filter: grayscale(100%); */
+	transition: 1s;
 }
 .img-wrapper:hover img
 {
-	filter: grayscale(0%);
-	transform: scale(1.1);
+	filter: grayscale(100%);
+	transform: scale(1);
 }
 
 .img-wrapper h2
 {
-	background: tomato;
+	background: #f38630;
 	font-family: Poppins;
 	color: #fff;
 	text-align: center;
@@ -261,7 +261,7 @@
 {
     height: auto;
     width: 100%;
-    color: tomato;
+    color:#03a9f4;
     text-align: left;
     padding-left: 20px;
 }
@@ -293,13 +293,13 @@
 
 .img-wrapper ul li a
 {
-	color: tomato;
+	color: #f38630;
 	background: rgba(255,255,255,0);
 }
 
 .img-wrapper ul li i
 {
-	color: tomato;
+	color: #f38630;
 	background: rgba(255,255,255,0);
 }
 
