Change background image of about page

--- a/about.css
+++ b/about.css
@@ -14,7 +14,7 @@
 }
 
 .about-us-banner-img {
-    background-image: url(https://www.showaround.com/src/images/cdbcd1ae9e0b729a9b0395bfaa66b3ac.jpg);
+    background-image: url(img/about-bg.jpg);
     background-repeat: no-repeat;
     position: absolute;
     width: 100%;
